quicklog/tests/failures/trailing_comma.stderr
error: unexpected end of input, expected an expression
 --> tests/failures/trailing_comma.rs:4:5
  |
4 |     info!("trailing comma",);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `info` (in Nightly builds, run with -Z macro-backtrace for more info)
