quicklog/tests/failures/trailing_comma.rs
use quicklog::info;

fn main() {
    info!("trailing comma",);
}
